--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,20 @@
-Django==2.2.24
-environs==5.2.1
+asgiref==3.5.2
+black==22.10.0
+click==8.1.3
+colorama==0.4.5
 dj-database-url==0.5.0
+Django==4.1.2
+django-phonenumber-field==7.0.0
+environs==5.2.1
+marshmallow==3.18.0
+mypy-extensions==0.4.3
+packaging==21.3
+pathspec==0.10.1
+phonenumbers==8.12.56
+platformdirs==2.5.2
+pyparsing==3.0.9
+python-dotenv==0.21.0
+pytz==2022.4
+sqlparse==0.4.3
+tomli==2.0.1
+tzdata==2022.4
